--- a/20180109-mohamed/builds/development/index.html
+++ b/20180109-mohamed/builds/development/index.html
@@ -20,11 +20,11 @@
   <div id="wrapper">
 
 <div class="chartTitle">How popular is the name <span id="named"></span> in Minnesota?</div>
-<div class="chatter">About <span class="stat legendary gray5" id="rate"></span> <span id="gender"></span> babies per 10,000 <span class="sex"></span> births in <span class="stat" id="year"></span> were named <span class="stat legendary gray5" id="named2"></span>. In Minnesota, the name has become significantly more common since the mid-1990s.</div>
+<div class="chatter"> In Minnesota, the name <span class="stat legendary gray5" id="named2"></span> has become significantly more common since the mid-1990s. About <span class="stat legendary gray5" id="rate"></span> <span id="gender"></span> babies per 10,000 <span class="sex"></span> births in <span class="stat" id="year"></span> received the name.</div>
 
 <div id="chart"></div>
 
-<small class="source">Note: Result reflects the last year when the name's rate reached above zero. Data includes years when five babies received a certain name, so no births on the chart could mean between 0 and 4.</small>
+<small class="source">Note: Result reflects the last year when the name's rate reached above zero and when five or more babies received the name.</small>
 
 <div class="byline">Source: U.S. Census Bureau | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a></div>
 </div>
