--- a/20180109-mohamed/builds/development/index.html
+++ b/20180109-mohamed/builds/development/index.html
@@ -20,7 +20,7 @@
   <div id="wrapper">
 
 <div class="chartTitle">How popular is the name <span id="named"></span> in Minnesota?</div>
-<div class="chatter"> In Minnesota, the name <span class="stat legendary gray5" id="named2"></span> has become significantly more common since the mid-1990s. About <span class="stat legendary gray5" id="rate"></span> <span id="gender"></span> babies per 10,000 <span class="sex"></span> births in <span class="stat" id="year"></span> received the name.</div>
+<div class="chatter"> In Minnesota, the name <span class="stat legendary leaf" id="named2"></span> has become significantly more common since the mid-1990s. About <span class="stat legendary leaf" id="rate"></span> <span id="gender"></span> babies per 10,000 <span class="sex"></span> births in <span class="stat" id="year"></span> received the name.</div>
 
 <div id="chart"></div>
 
