--- a/20180109-mohamed/builds/development/index.html
+++ b/20180109-mohamed/builds/development/index.html
@@ -19,14 +19,26 @@
 <body>
   <div id="wrapper">
 
+<div class="slide" id="trend">
 <div class="chartTitle">How popular is the name <span id="named"></span> in Minnesota?</div>
-<div class="chatter"> In Minnesota, the name <span class="stat legendary leaf" id="named2"></span> has become significantly more common since the mid-1990s. About <span class="stat legendary leaf" id="rate"></span> <span id="gender"></span> babies per 10,000 <span class="sex"></span> births in <span class="stat" id="year"></span> received the name.</div>
+<div class="chatter">In Minnesota, the name <span class="stat legendary leaf" id="named2"></span> has become significantly more common since the mid-1990s. About <span class="stat legendary leaf" id="rate"></span> <span id="gender"></span> babies per 10,000 <span class="sex"></span> births in <span class="stat" id="year"></span> received the name.</div>
 
 <div id="chart"></div>
 
 <small class="source">Note: Result reflects the last year when the name's rate reached above zero and when five or more babies received the name.</small>
 
 <div class="byline">Source: U.S. Census Bureau | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a></div>
+</div>
+
+<div class="slide" id="trend">
+<div class="chartTitle">Mohamed is still comparatively rare in Minnesota</div>
+<div class="chatter">While the name <span class="stat legendary leaf">Mohamed</span> has become more popular in Minnesota, it's still dwarfed by more common boy's names like <span class="stat legendary clay">Henry</span> when it comes to rates per 10,000 births, and was about as common as <span class="stat legendary gray3">Maverick</span> and <span class="stat legendary bark">Xavier</span> in 2016.</div>
+
+<div id="chart2"></div>
+
+
+<div class="byline">Source: U.S. Census Bureau | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a></div>
+</div>
 </div>
 
 <script src="//code.jquery.com/jquery-latest.js"></script>
