--- a/20180109-mohamed/builds/development/index.html
+++ b/20180109-mohamed/builds/development/index.html
@@ -30,7 +30,8 @@
 <div class="byline">Source: U.S. Census Bureau | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a></div>
 </div>
 
-<div class="slide" id="trend">
+
+<div class="slide" id="rates">
 <div class="chartTitle">Mohamed is still comparatively rare in Minnesota</div>
 <div class="chatter">While the name <span class="stat legendary leaf">Mohamed</span> has become more popular in Minnesota, it's still dwarfed by more common boy's names like <span class="stat legendary clay">Henry</span> when it comes to rates per 10,000 births, and was about as common as <span class="stat legendary gray3">Maverick</span> and <span class="stat legendary bark">Xavier</span> in 2016.</div>
 
