--- a/20180109-mohamed/builds/development/index.html
+++ b/20180109-mohamed/builds/development/index.html
@@ -33,7 +33,7 @@
 
 <div class="slide" id="rates">
 <div class="chartTitle">Mohamed is still comparatively rare in Minnesota</div>
-<div class="chatter">While the name <span class="stat legendary leaf">Mohamed</span> has become more popular in Minnesota, it's still dwarfed by more common boy's names like <span class="stat legendary clay">Henry</span> when it comes to rates per 10,000 births, and was about as common as <span class="stat legendary gray3">Maverick</span> and <span class="stat legendary bark">Xavier</span> in 2016.</div>
+<div class="chatter">While the name <span class="stat legendary leaf">Mohamed</span> has become more popular in Minnesota, it was dwarfed by <span class="stat legendary clay">Henry</span>, the most popular boy’s name in 2016. It was also less common than <span class="stat legendary gray3">Maverick</span> in 2016 and about as popular as <span class="stat legendary bark">Xavier</span>.
 
 <div id="chart2"></div>
 
