--- a/20180109-mohamed/builds/development/index.html
+++ b/20180109-mohamed/builds/development/index.html
@@ -32,8 +32,8 @@
 
 
 <div class="slide" id="rates">
-<div class="chartTitle">Mohamed is still comparatively rare in Minnesota</div>
-<div class="chatter">While the name <span class="stat legendary leaf">Mohamed</span> has become more popular in Minnesota, it was dwarfed by <span class="stat legendary clay">Henry</span>, the most popular boy’s name in 2016. It was also less common than <span class="stat legendary gray3">Maverick</span> in 2016 and about as popular as <span class="stat legendary bark">Xavier</span>.
+<div class="chartTitle">Mohamed isn't that common in Minnesota</div>
+<div class="chatter">While the name <span class="stat legendary leaf">Mohamed</span> has become more popular in Minnesota, it was dwarfed by <span class="stat legendary clay">Henry</span>, the most popular boy’s name in 2016. It was also less common than <span class="stat legendary gray3">Maverick</span> and about as popular as <span class="stat legendary bark">Xavier</span>.
 
 <div id="chart2"></div>
 
