--- a/20180118-vikings_bars/pages/_main-index.ejs.html
+++ b/20180118-vikings_bars/pages/_main-index.ejs.html
@@ -9,7 +9,7 @@
 		  <section class="main">
 		        <div class="wrapper-demo">
 		          <div id="dd" class="wrapper-dropdown-1" tabindex="1">
-		            <span>Arizona</span>
+		            <span>Select a state</span>
 		              <ul class="dropdown months" tabindex="1">
 				        <li class="thisSwitch">Alabama</li>
 						<li class="thisSwitch">Alaska</li>
