--- a/20180118-vikings_bars/pages/_main-index.ejs.html
+++ b/20180118-vikings_bars/pages/_main-index.ejs.html
@@ -1,7 +1,7 @@
 <div id="wrapper">
 <div id="lookup" class="slide">
-	<div class="chartTitle">Vikings expat nation, by the bar</div>
-	<div class="chatter">Find <span class="legendary vikings">Vikings fan bars</span> outside of Minnesota by selecting a state from the dropdown.</div>
+	<div class="chartTitle">This is Vikings Nation</div>
+	<div class="chatter">Find a <span class="legendary vikings">Vikings bar</span> outside of Minnesota by selecting a state from the dropdown menu, or click on a bar in the list below.</div>
 	<!-- <div id="filter"><input type="search" id="filter_box" placeholder="Search by name, state or location" /></div> -->
 
 		<div id="viewSwitch">
@@ -11,7 +11,6 @@
 		          <div id="dd" class="wrapper-dropdown-1" tabindex="1">
 		            <span>Select a state</span>
 		              <ul class="dropdown months" id="switches" tabindex="1">
-		              	<li class="thisSwitch">Alaska</li>
 		              </ul>
 		          </div>
 		        ​</div>
