--- a/20180118-vikings_bars/pages/_main-index.ejs.html
+++ b/20180118-vikings_bars/pages/_main-index.ejs.html
@@ -9,7 +9,7 @@
 		  <section class="main">
 		        <div class="wrapper-demo">
 		          <div id="dd" class="wrapper-dropdown-1" tabindex="1">
-		            <span>Select a state</span>
+		            <span class='thisone'>Select a state</span>
 		              <ul class="dropdown months" id="switches" tabindex="1">
 		              </ul>
 		          </div>
