--- a/20180118-vikings_bars/pages/_main-index.ejs.html
+++ b/20180118-vikings_bars/pages/_main-index.ejs.html
@@ -1,7 +1,7 @@
 <div id="wrapper">
 <div id="lookup" class="slide">
 	<div class="chartTitle">This is Vikings Nation</div>
-	<div class="chatter">Find a <span class="legendary vikings">Vikings bar</span> outside of Minnesota by selecting a state from the dropdown menu, or click on a bar in the list below.</div>
+	<div class="chatter">Find a <span class="legendary vikings mapify">Vikings bar</span> outside of Minnesota by selecting a state, or <span class="legendary gray3 return">see all the bars</span>.</div>
 	<!-- <div id="filter"><input type="search" id="filter_box" placeholder="Search by name, state or location" /></div> -->
 
 		<div id="viewSwitch">
@@ -9,7 +9,7 @@
 		  <section class="main">
 		        <div class="wrapper-demo">
 		          <div id="dd" class="wrapper-dropdown-1" tabindex="1">
-		            <span class='thisone'>Select a state</span>
+		            <span class='thisone' id="selectText">Select a state</span>
 		              <ul class="dropdown months" id="switches" tabindex="1">
 		              </ul>
 		          </div>
