--- a/20180122-vikes_viewers/builds/development/index.html
+++ b/20180122-vikes_viewers/builds/development/index.html
@@ -25,7 +25,7 @@
 
 <div id="chart"></div>
 
-<div class="byline">Source: Nielson | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a></div>
+<div class="byline">Source: Nielsen | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a></div>
 </div>
 
 </div>
