--- a/20180212-housing/builds/development/index.html
+++ b/20180212-housing/builds/development/index.html
@@ -15,7 +15,10 @@
  
 <div id="wrapper">
 
-<div id="map" class="mobilekill"></div>
+<div id="map" class="mobilekill">
+
+<div class="zoom">reset</div>
+</div>
 
 <div class="smallBreak" class="mobilekill"></div>
 
