--- a/20180212-housing/builds/development/index.html
+++ b/20180212-housing/builds/development/index.html
@@ -30,7 +30,7 @@
 
 <div class="smallBreak" class="mobilekill"></div>
 
-<div class="mobilekill">Shows metro area cities by index score. Shaded from <span class='legendary orange1'>less</span> to <span class='legendary orange5'>more</span>. Doesn't list cities with <span class='legendary gray3'>less than 100 sales</span>.</div>
+<div class="mobilekill">Shows metro area cities by housing index score, from <span class='legendary orange1'>less</span> to <span class='legendary orange5'>more</span>. Those with <span class='legendary gray3'>less than 100 sales</span> not listed.</div>
 
 <div id="reference" class="mobilekill">
 
@@ -72,13 +72,16 @@
 
 <div class="smallBreak"></div>
 
+
+
+<div class="metricRow">
+
 <div id="map" class="mobilekill">
 
 <div class="zoom">reset</div>
 </div>
 
-<!-- <div class="metricRow">
-  <div style="text-align:left; text-decoration:underline;">Characteristics</div>
+<!--   <div style="text-align:left; text-decoration:underline;">Characteristics</div>
   <div class="smallBreak"></div>
 
   <div class="metricCol">
@@ -96,13 +99,13 @@
   <div class="metricCol">
     <div class="metric" id="renters">0%</div>
     <div class="metricLabel">renters</div>
-  </div>
+  </div> -->
 </div>
 
 <div class="breaker mobileshow"></div>
 
-<div id="chart" class="mobilekill"></div> -->
-
+<!-- <div id="chart" class="mobilekill"></div>
+ -->
 </div>
 
 <div class="onoffswitch mobileshow">
