--- a/20180212-housing/builds/development/index.html
+++ b/20180212-housing/builds/development/index.html
@@ -16,12 +16,22 @@
 <div id="wrapper">
 
 <div class="slide" id="highlights">
+<div class="chartTitle">The metro's hottest housing markets</div>
+<div class="chatter">chatter.</div>
 
+<div id="chartHighlights" class="chart"></div>
+
+<div class="byline">Source: Minneapolis Area Association of Realtors | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a></div>
 </div>
 
 
 <div class="slide" id="rankings">
+<div class="chartTitle">Houses selling faster and faster</div>
+<div class="chatter">The average number of days a house stays on the market before being sold drastically decreased across most Twin Cities communities between <span class='legendary blue4'>2016</span> and <span class='legendary orange2'>2017</span>.</div>
 
+<div id="chartMarket" class="chart"></div>
+
+<div class="byline">Source: Minneapolis Area Association of Realtors | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a></div>
 </div>
 
 
@@ -30,7 +40,8 @@
 
 <div class="smallBreak" class="mobilekill"></div>
 
-<div class="mobilekill">Shows metro area cities by housing index score, from <span class='legendary orange1'>less</span> to <span class='legendary orange5'>more</span>. Those with <span class='legendary gray3'>less than 100 sales</span> not listed.</div>
+<div class="chartTitle">Explore the Twin Cities housing markets</div>
+<div class="chatter">Shows metro area cities by housing index score, from <span class='legendary orange1'>less</span> to <span class='legendary orange5'>more</span>. Those with <span class='legendary gray3'>less than 100 sales</span> not listed.</div>
 
 <div id="reference" class="mobilekill">
 
@@ -127,7 +138,7 @@
 <div style="clear:both;"></div>
 
 <div class="smallBreak"></div>
-<div class="mobilekill">*Change between 2017 and the previous four-year average.</div>
+<div class="source mobilekill">*Change between 2017 and the previous four-year average.</div>
 
 <div class="byline">Source: Minneapolis Area Association of Realtors | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a></div>
 </div>
