--- a/20180212-housing/builds/development/index.html
+++ b/20180212-housing/builds/development/index.html
@@ -17,9 +17,195 @@
 
 <div class="slide" id="highlights">
 <div class="chartTitle">The metro's hottest housing markets</div>
-<div class="chatter">chatter.</div>
+<div class="chatter">Shows the hottest housing markets in the Twin Cities metro area.</div>
 
-<div id="chartHighlights" class="chart"></div>
+<div id="chartHighlights" class="chart">
+
+<div id="richfield">
+<div class="toprow">
+<div class="thumbnail"></div>
+<div class="name"></div>
+<div class="score"></div>
+</div>
+
+<div class="metricRow">
+  <div style="text-align:left; text-decoration:underline;">Characteristics</div>
+  <div class="smallBreak"></div>
+
+  <div class="metricCol">
+    <div class="metric income"></div>
+    <div class="metricLabel">median income</div>
+  </div>
+  <div class="metricCol">
+    <div class="metric homes">0%</div>
+    <div class="metricLabel">single-family homes</div>
+  </div>
+  <div class="metricCol">
+    <div class="metric kids">0%</div>
+    <div class="metricLabel">kids</div>
+  </div> 
+  <div class="metricCol">
+    <div class="metric renters">0%</div>
+    <div class="metricLabel">renters</div>
+  </div>
+</div>
+</div>
+
+
+<div id="moundsview">
+<div class="toprow">
+<div class="thumbnail"></div>
+<div class="name"></div>
+<div class="score"></div>
+</div>
+
+<div class="metricRow">
+  <div style="text-align:left; text-decoration:underline;">Characteristics</div>
+  <div class="smallBreak"></div>
+
+  <div class="metricCol">
+    <div class="metric income"></div>
+    <div class="metricLabel">median income</div>
+  </div>
+  <div class="metricCol">
+    <div class="metric homes">0%</div>
+    <div class="metricLabel">single-family homes</div>
+  </div>
+  <div class="metricCol">
+    <div class="metric kids">0%</div>
+    <div class="metricLabel">kids</div>
+  </div> 
+  <div class="metricCol">
+    <div class="metric renters">0%</div>
+    <div class="metricLabel">renters</div>
+  </div>
+</div>
+</div>
+
+
+<div id="champlin">
+<div class="toprow">
+<div class="thumbnail"></div>
+<div class="name"></div>
+<div class="score"></div>
+</div>
+
+<div class="metricRow">
+  <div style="text-align:left; text-decoration:underline;">Characteristics</div>
+  <div class="smallBreak"></div>
+
+  <div class="metricCol">
+    <div class="metric income"></div>
+    <div class="metricLabel">median income</div>
+  </div>
+  <div class="metricCol">
+    <div class="metric homes">0%</div>
+    <div class="metricLabel">single-family homes</div>
+  </div>
+  <div class="metricCol">
+    <div class="metric kids">0%</div>
+    <div class="metricLabel">kids</div>
+  </div> 
+  <div class="metricCol">
+    <div class="metric renters">0%</div>
+    <div class="metricLabel">renters</div>
+  </div>
+</div>
+</div>
+
+
+<div id="brooklyncenter">
+<div class="toprow">
+<div class="thumbnail"></div>
+<div class="name"></div>
+<div class="score"></div>
+</div>
+
+<div class="metricRow">
+  <div style="text-align:left; text-decoration:underline;">Characteristics</div>
+  <div class="smallBreak"></div>
+
+  <div class="metricCol">
+    <div class="metric income"></div>
+    <div class="metricLabel">median income</div>
+  </div>
+  <div class="metricCol">
+    <div class="metric homes">0%</div>
+    <div class="metricLabel">single-family homes</div>
+  </div>
+  <div class="metricCol">
+    <div class="metric kids">0%</div>
+    <div class="metricLabel">kids</div>
+  </div> 
+  <div class="metricCol">
+    <div class="metric renters">0%</div>
+    <div class="metricLabel">renters</div>
+  </div>
+</div>
+</div>
+
+<div id="fridley">
+<div class="toprow">
+<div class="thumbnail"></div>
+<div class="name"></div>
+<div class="score"></div>
+</div>
+
+<div class="metricRow">
+  <div style="text-align:left; text-decoration:underline;">Characteristics</div>
+  <div class="smallBreak"></div>
+
+  <div class="metricCol">
+    <div class="metric income"></div>
+    <div class="metricLabel">median income</div>
+  </div>
+  <div class="metricCol">
+    <div class="metric homes">0%</div>
+    <div class="metricLabel">single-family homes</div>
+  </div>
+  <div class="metricCol">
+    <div class="metric kids">0%</div>
+    <div class="metricLabel">kids</div>
+  </div> 
+  <div class="metricCol">
+    <div class="metric renters">0%</div>
+    <div class="metricLabel">renters</div>
+  </div>
+</div>
+</div>
+
+
+<div id="robbinsdale">
+<div class="toprow">
+<div class="thumbnail"></div>
+<div class="name"></div>
+<div class="score"></div>
+</div>
+
+<div class="metricRow">
+  <div style="text-align:left; text-decoration:underline;">Characteristics</div>
+  <div class="smallBreak"></div>
+
+  <div class="metricCol">
+    <div class="metric income"></div>
+    <div class="metricLabel">median income</div>
+  </div>
+  <div class="metricCol">
+    <div class="metric homes">0%</div>
+    <div class="metricLabel">single-family homes</div>
+  </div>
+  <div class="metricCol">
+    <div class="metric kids">0%</div>
+    <div class="metricLabel">kids</div>
+  </div> 
+  <div class="metricCol">
+    <div class="metric renters">0%</div>
+    <div class="metricLabel">renters</div>
+  </div>
+</div>
+</div>
+
+</div>
 
 <div class="byline">Source: Minneapolis Area Association of Realtors | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a></div>
 </div>
@@ -36,10 +222,6 @@
 
 
 <div class="slide" id="lookup">
-
-
-<div class="smallBreak" class="mobilekill"></div>
-
 <div class="chartTitle">Explore the Twin Cities housing markets</div>
 <div class="chatter">Shows metro area cities by housing index score, from <span class='legendary orange1'>less</span> to <span class='legendary orange5'>more</span>. Those with <span class='legendary gray3'>less than 100 sales</span> not listed.</div>
 
