--- a/20180212-housing/builds/development/index.html
+++ b/20180212-housing/builds/development/index.html
@@ -129,7 +129,7 @@
 <div id="listing">
 <div id="filter"><input type="search" id="filter_box" placeholder="Search by city" /></div>
 <div class="rowHead">
-<div class='col th name' data="name">Community</div><div class='col th score' data="index">Index</div>
+<div class='col th2 name' data="name">Community</div><div class='col th2 score' data="index">Index</div>
 </div>
 <div id="cities"></div>
 </div>
