--- a/20180212-housing/builds/development/index.html
+++ b/20180212-housing/builds/development/index.html
@@ -67,12 +67,16 @@
     <div class="metricLabel">avg market days</div>
   </div>
   <div class="metricCol">
+    <div class="metric" id="daysC"></div>
+    <div class="metricLabel">change in avg market days</div>
+  </div>
+  <div class="metricCol">
     <div class="metric" id="change">0%</div>
-    <div class="metricLabel">change in price per square foot*</div>
+    <div class="metricLabel">change in price per sqft*</div>
   </div>
   <div class="metricCol">
     <div class="metric" id="distressed">0%</div>
-    <div class="metricLabel">distressed</div>
+    <div class="metricLabel">distressed properties</div>
   </div>
   <div class="metricCol">
     <div class="metric" id="ppsf">0%</div>
