--- a/20180212-housing/builds/development/index.html
+++ b/20180212-housing/builds/development/index.html
@@ -39,7 +39,7 @@
 <div class="breaker"></div>
 
 <div class="slide" id="lookup">
-<div class="chartTitle">Explore the Twin Cities housing markets</div>
+<div class="chartTitle">Explore Twin Cities housing markets</div>
 <div class="chatter">Shows metro area cities by housing index score, from <span class='legendary orange1'>less</span> to <span class='legendary orange5'>more</span>. Those with <span class='legendary gray3'>less than 100 sales</span> not listed.</div>
 
 <div id="reference" class="mobilekill">
