--- a/20180218-dui/pages/_main-index.ejs.html
+++ b/20180218-dui/pages/_main-index.ejs.html
@@ -2,7 +2,7 @@
 
 <div id="ranking" class="slide">
 	<div class="chartTitle">Metro area DWI rates</div>
-	<div class="chatter">Shows <span class='blue4 legendary'>DWI arrest rates per 10,000 residents</span> among the 50 largest Twin Cities area police departments.</div>
+	<div class="chatter">Shows <span class='blue4 legendary'>DWI arrest rates per 10,000 residents</span> among 25 Minnesota police departments.</div>
 	<div class="chart" id="chartRank"></div>
 	<div class="byline">Source: Department of Public Safety | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="./data/maindata.xlsx" target="new_">Download Data</a></div>
 </div>
@@ -17,7 +17,7 @@
 
 <div id="mapping" class="slide">
 	<div class="chartTitle">DWI arrests across Edina</div>
-	<div class="chatter">Shows general areas where Edina police made <span class='blue4 legendary'>DWI arrests</span> in 2017, sized by numbers ranging from 1 to 126. Locations may not be precise.</div>
+	<div class="chatter">Shows general areas where Edina police made <span class='blue4 legendary'>DWI arrests</span> in 2017, sized number of arrests (1-126). Locations may not be precise.</div>
 	<div class="map" id="map"></div>
 	<div class="byline">Source: Edina Police Department | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="./data/maindata.xlsx" target="new_">Download Data</a></div>
 </div>
@@ -25,7 +25,7 @@
 
 <div id="state" class="slide">
 	<div class="chartTitle">DWI rates among largest departments</div>
-	<div class="chatter">Shows general locations where Edina police made <span class='blue4 legendary'>DWI arrests</span> in 2017.</div>
+	<div class="chatter">Shows how Edina compares to some of Minnesota's largest police departments in <span class='blue4 legendary'>DWI arrest rates per 10,000 residents</span>.</div>
 	<div class="chart" id="chartSize"></div>
 	<div class="byline">Source: Edina Police Department | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="./data/maindata.xlsx" target="new_">Download Data</a></div>
 </div>
