--- a/20180218-dui/pages/_main-index.ejs.html
+++ b/20180218-dui/pages/_main-index.ejs.html
@@ -2,14 +2,15 @@
 
 <div id="ranking" class="slide">
 	<div class="chartTitle">Minnesota DWI arrest rates</div>
-	<div class="chatter">Shows <span class='blue4 legendary'>DWI arrest rates per 10,000 residents</span> among 25 major Minnesota law enforcement agencies with the highest rates.</div>
+	<div class="chatter">Shows <span class='blue4 legendary'>DWI arrests per 10,000 residents</span> among 25 major Minnesota law enforcement agencies with the highest rates.</div>
 	<div class="chart" id="chartRank"></div>
-	<div class="byline">Source: Department of Public Safety | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="./data/maindata.xlsx" target="new_">Download Data</a></div>
+	<div class="byline">Source: Minnesota Department of Public Safety | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="./data/maindata.xlsx" target="new_">Download Data</a></div>
 </div>
+
 
 <div id="trend" class="slide">
 	<div class="chartTitle">Increasing Edina DWI arrests</div>
-	<div class="chatter">Shows <span class='blue4 legendary'>DWI arrests</span> by the Edina police department over time.</div>
+	<div class="chatter">Yearly <span class='blue4 legendary'>DWI arrest totals</span> by the Edina police department have tripled over time.</div>
 	<div class="chart" id="chartTrend"></div>
 	<div class="byline">Source: Edina Police Department | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="./data/maindata.xlsx" target="new_">Download Data</a></div>
 </div>
@@ -17,17 +18,17 @@
 
 <div id="mapping" class="slide">
 	<div class="chartTitle">DWI arrests across Edina</div>
-	<div class="chatter">Shows general areas where Edina police made <span class='blue4 legendary'>DWI arrests</span> in 2017, sized number of arrests (1-126). Locations may not be precise.</div>
+	<div class="chatter">Shows general areas where Edina police made <span class='blue4 legendary'>DWI arrests</span> in 2017, sized number of arrests. Many were along major corridors like highways 100 and 62. Locations may not be precise.</div>
 	<div class="map" id="map"></div>
 	<div class="byline">Source: Edina Police Department | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="./data/maindata.xlsx" target="new_">Download Data</a></div>
 </div>
 
 
 <div id="state" class="slide">
-	<div class="chartTitle">DWI rates among largest departments</div>
-	<div class="chatter">Shows how Edina compares to Minnesota's ten largest law enforcement agencies in <span class='blue4 legendary'>DWI arrest rates per 10,000 residents</span>.</div>
+	<div class="chartTitle">DWI rates among largest populations served</div>
+	<div class="chatter">Shows how Edina compares to Minnesota law enforcement agencies serving the largest populations by <span class='blue4 legendary'>DWI arrest rates per 10,000 residents</span>.</div>
 	<div class="chart" id="chartSize"></div>
-	<div class="byline">Source: Edina Police Department | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="./data/maindata.xlsx" target="new_">Download Data</a></div>
+	<div class="byline">Source: Minnesota Department of Public Safety | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="./data/maindata.xlsx" target="new_">Download Data</a></div>
 </div>
 
 </div>
