--- a/20180218-dui/pages/_main-index.ejs.html
+++ b/20180218-dui/pages/_main-index.ejs.html
@@ -18,7 +18,7 @@
 
 <div id="mapping" class="slide">
 	<div class="chartTitle">DWI arrests across Edina</div>
-	<div class="chatter">Shows general areas where Edina police made <span class='blue4 legendary'>DWI arrests</span> in 2017, sized number of arrests. Many were along major corridors like highways 100 and 62. Locations may not be precise.</div>
+	<div class="chatter">Shows general areas where Edina police made <span class='blue4 legendary'>DWI arrests</span> in 2017, sized by number of arrests. Many were along major corridors like highways 100 and 62. Locations may not be precise.</div>
 	<div class="map" id="map"></div>
 	<div class="byline">Source: Edina Police Department | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="./data/maindata.xlsx" target="new_">Download Data</a></div>
 </div>
