--- a/20180212-housing/builds/development/index.html
+++ b/20180212-housing/builds/development/index.html
@@ -18,7 +18,7 @@
 <div class="slide" id="highlights">
 <div class="chartTitle">The metro's hottest housing markets</div>
 
-<div class="chatter">Shows the top 30 housing markets in the Twin Cities metro area by various metrics, shaded from <span class='legendary orange1'>less</span> to <span class='legendary orange5'>more</span>.</div>
+<div class="chatter">Shows the top 30 housing markets in the Twin Cities metro area by various metrics, shaded from <span class='legendary orange5'>more</span> to <span class='legendary orange1'>less</span>.</div>
 
 
 <div id="chartHead"></div>
