--- a/20180212-housing/builds/development/index.html
+++ b/20180212-housing/builds/development/index.html
@@ -24,7 +24,7 @@
 <div id="chartHead"></div>
 <div id="chartHighlights" class="chart"></div>
 
-<div class="byline">Source: Minneapolis Area Association of Realtors | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a></div>
+<div class="byline">Source: Minneapolis Area Association of Realtors | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | *Change between 2017 and the previous four-year average.</div>
 </div>
 
 <div class="slide" id="rankings">
@@ -70,7 +70,7 @@
   </div>
   <div class="metricCol">
     <div class="metric" id="change">0%</div>
-    <div class="metricLabel">change in price per sqft*</div>
+    <div class="metricLabel">change in price per sq. ft.*</div>
   </div>
   <div class="metricCol">
     <div class="metric" id="distressed">0%</div>
@@ -139,9 +139,8 @@
 <div style="clear:both;"></div>
 
 <div class="smallBreak"></div>
-<div class="source mobilekill">*Change between 2017 and the previous four-year average.</div>
 
-<div class="byline">Source: Minneapolis Area Association of Realtors | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a></div>
+<div class="byline">Source: Minneapolis Area Association of Realtors | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | *Change between 2017 and the previous four-year average.</div>
 </div>
 
 </div>
